# Chess-Prompt-Competition

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  FINAL_RECOMMENDATION.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_SUMMARY.md  README.md  comprehensive_test.py  config.yml  config_optimized.yml  pyproject.toml  quick_test.py  regular_chess.py  utils.py
textarena/agents/: basic_agents.py
textarena/envs/Chess/: env.py
